refactor: clean up backend code AM-3258