@@ -19,10 +19,7 @@ import com.github.dozermapper.core.DozerBeanMapperBuilder;
 import com.github.dozermapper.core.Mapper;
 import io.gravitee.am.repository.jdbc.common.dialect.DatabaseDialectHelper;
 import io.gravitee.am.repository.jdbc.management.api.model.mapper.LocalDateConverter;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
+import lombok.Getter;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -32,6 +29,10 @@ import org.springframework.data.relational.core.sql.SqlIdentifier;
 import org.springframework.r2dbc.core.DatabaseClient;
 import org.springframework.transaction.ReactiveTransactionManager;
 
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
+
 /**
  * @author Eric LELEU (eric.leleu at graviteesource.com)
  * @author GraviteeSource Team
@@ -40,6 +41,7 @@ public abstract class AbstractJdbcRepository {
     protected final Logger LOGGER = LoggerFactory.getLogger(getClass());
 
     @Autowired
+    @Getter
     private R2dbcEntityTemplate template;
 
     @Autowired
@@ -50,7 +52,7 @@ public abstract class AbstractJdbcRepository {
 
     protected LocalDateConverter dateConverter = new LocalDateConverter();
 
-    protected static final Mapper mapper = DozerBeanMapperBuilder.create().withMappingFiles(Arrays.asList("dozer.xml")).build();
+    protected static final Mapper mapper = DozerBeanMapperBuilder.create().withMappingFiles(List.of("dozer.xml")).build();
 
     @Autowired
     protected MappingR2dbcConverter rowMapper;
@@ -59,7 +61,7 @@ public abstract class AbstractJdbcRepository {
         return value == null ? spec.bindNull(name, type) : spec.bind(name, value);
     }
 
-    protected <T> Map<SqlIdentifier, Object> addQuotedField(Map<SqlIdentifier, Object> spec, String name, Object value) {
+    protected Map<SqlIdentifier, Object> addQuotedField(Map<SqlIdentifier, Object> spec, String name, Object value) {
         spec.put(SqlIdentifier.unquoted(databaseDialectHelper.toSql(SqlIdentifier.quoted(name))), value);
         return spec;
     }
@@ -71,31 +73,27 @@ public abstract class AbstractJdbcRepository {
     }
 
     protected String createUpdateStatement(String table, List<String> columns, List<String> whereClauseColumns) {
-        StringBuffer buffer = new StringBuffer("UPDATE " + table + " SET ");
+        StringBuilder builder = new StringBuilder("UPDATE " + table + " SET ");
         for (int i = 0; i < columns.size(); ++i) {
             final String colName = columns.get(i);
-            buffer.append(databaseDialectHelper.toSql(SqlIdentifier.quoted(colName)));
-            buffer.append(" = :");
-            buffer.append(colName);
+            builder.append(databaseDialectHelper.toSql(SqlIdentifier.quoted(colName)));
+            builder.append(" = :");
+            builder.append(colName);
             if (i + 1 != columns.size()) {
-                buffer.append(", ");
+                builder.append(", ");
             }
         }
-        buffer.append(" WHERE ");
+        builder.append(" WHERE ");
         for (int i = 0; i < whereClauseColumns.size(); ++i) {
             final String colName = whereClauseColumns.get(i);
-            buffer.append(databaseDialectHelper.toSql(SqlIdentifier.quoted(colName)));
-            buffer.append(" = :");
-            buffer.append(colName);
+            builder.append(databaseDialectHelper.toSql(SqlIdentifier.quoted(colName)));
+            builder.append(" = :");
+            builder.append(colName);
 
             if (i + 1 != whereClauseColumns.size()) {
-                buffer.append(" AND ");
+                builder.append(" AND ");
             }
         }
-        return buffer.toString();
-    }
-
-    public R2dbcEntityTemplate getTemplate() {
-        return template;
+        return builder.toString();
     }
 }
